// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`launchTkenPair debug not win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=live  debug &> tool.token.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchTkenPair debug not win32 2`] = `
Object {
  "default": Object {
    "failCount": 1,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "default",
  },
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair debug win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=dev  debug >> tool.token.log",
    Object {},
  ],
]
`;

exports[`launchTokenPair debug win32 2`] = `
Object {
  "default": Object {
    "failCount": 1,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "default",
  },
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair fail not win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=live  &> tool.token.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchTokenPair fail not win32 2`] = `
Object {
  "default": Object {
    "failCount": 1,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "default",
  },
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair fail not win32 3`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "env": "live",
      "live": false,
    },
    "token",
  ],
]
`;

exports[`launchTokenPair fail win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=dev  >> tool.token.log",
    Object {},
  ],
]
`;

exports[`launchTokenPair fail win32 2`] = `
Object {
  "default": Object {
    "failCount": 1,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "default",
  },
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair fail win32 3`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "env": "dev",
      "live": false,
    },
    "token",
  ],
]
`;

exports[`launchTokenPair success not win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=live  &> tool.token.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchTokenPair success not win32 2`] = `
Object {
  "default": Object {
    "failCount": 1,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "default",
  },
  "token": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair success not win32 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchTokenPair success win 32 1`] = `
Array [
  Array [
    "npm run tool token=token env=dev  >> tool.token.log",
    Object {},
  ],
]
`;

exports[`launchTokenPair success win 32 2`] = `
Object {
  "default": Object {
    "failCount": 1,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "default",
  },
  "token": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair success win 32 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`retry after long enought time 1`] = `
Object {
  "failCount": 1,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "token": "token",
}
`;

exports[`retry within short time 1`] = `
Object {
  "failCount": 3,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "token": "token",
}
`;

exports[`startLaunching 1`] = `Promise {}`;

exports[`startLaunching Token Length 1`] = `Promise {}`;

exports[`startLaunching Token Length 2`] = `Promise {}`;

exports[`startLaunching no rawToken 1`] = `Promise {}`;

exports[`startLaunching normal 1`] = `Promise {}`;
